k8s/churn-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-model-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: churn-model
  template:
    metadata:
      labels:
        app: churn-model
    spec:
      containers:
      - name: churn-model-container
        image: vamlin/fast:1.0.11
        ports:
        - containerPort: 80
