k8s/filebeat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebeat
  namespace: default
  labels:
    k8s-app: filebeat
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: filebeat
  template:
    metadata:
      labels:
        k8s-app: filebeat
    spec:
      containers:
        - name: filebeat
          image: docker.elastic.co/beats/filebeat:7.9.3
          args: [
            "-c", "/etc/filebeat.yml",
            "-e",
          ]
          volumeMounts:
            - name: config
              mountPath: /etc/filebeat.yml
              subPath: filebeat.yml
            - name: varlog
              mountPath: /var/log/log-server
      volumes:
        - name: config
          configMap:
            name: filebeat-config
        - name: varlog
          hostPath:
            path: /var/log/log-server
            type: Directory
