k8s/churn-model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-model-service
spec:
  type: NodePort  # Minikube에서 접근하기 위해 NodePort 사용
  selector:
    app: churn-model
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30001  # 필요에 따라 조정
