k8s/log-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-server-service
spec:
  selector:
    app: log-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
