k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - name: api-port           # API 포트의 이름
      protocol: TCP
      port: 9000               # API 포트
      targetPort: 9000
    - name: web-ui-port         # 웹 UI 포트의 이름
      protocol: TCP
      port: 9090               # 웹 UI 포트
      targetPort: 9090
  type: NodePort
